# JYCache

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  build.sh  install.sh
LinUCBSchedule/: LinUCB.py  ScheduleFrame.py  config.py  server.py  server_util.py
LinUCBSchedule/analyse/: activate_fun.py  analyse_config.py  analyse_data.py
doc/: cache_framework_design.md  frequently_asked_questions.md  技术报告.md  项目PR说明.md
doc/conf_spec/: newcache.conf_spec
global_cache/: CMakeLists.txt  Common.cpp  Common.h  ErasureCodingWriteCacheClient.cpp  ErasureCodingWriteCacheClient.h  EtcdClient.h  FileSystemDataAdaptor.h  GarbageCollectorMain.cpp  GlobalCacheClient.cpp  GlobalCacheClient.h  GlobalCacheServer.cpp  GlobalCacheServer.h  GlobalCacheServerMain.cpp  GlobalDataAdaptor.cpp  GlobalDataAdaptor.h  Placement.h  ReadCache.cpp  ReadCache.h  ReadCacheClient.cpp  ReadCacheClient.h  ReplicationWriteCacheClient.cpp  ReplicationWriteCacheClient.h  S3DataAdaptor.cpp  S3DataAdaptor.h  WriteCache.cpp  WriteCache.h  WriteCacheClient.h  gcache.proto
hadoop_posix/: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  copts.bzl
hadoop_posix/hadoop_sdk/: README.md
hadoop_posix/hadoop_sdk/java/: pom.xml
hadoop_posix/hadoop_sdk/java/native/: BUILD  io_aisoft9_jycache_fs_libfs_JYCacheFSMount.cpp  io_aisoft9_jycache_fs_libfs_JYCacheFSMount.h
hadoop_posix/hadoop_sdk/java/src/main/java/io/aisoft9/jycache/fs/flink/: JYCacheFileSystemFactory.java  JYCacheFileSystemTableFactory.java
hadoop_posix/hadoop_sdk/java/src/main/java/io/aisoft9/jycache/fs/hadoop/: JYCacheFS.java  JYCacheFSInputStream.java  JYCacheFSOutputStream.java  JYCacheFSProto.java  JYCacheFSTalker.java  JYCacheFileSystem.java
hadoop_posix/hadoop_sdk/java/src/main/java/io/aisoft9/jycache/fs/hadoop/permission/: Group.java  Helper.java  Permission.java  User.java
hadoop_posix/hadoop_sdk/java/src/main/java/io/aisoft9/jycache/fs/libfs/: JYCacheFSMount.java  JYCacheFSNativeLoader.java  JYCacheFSStat.java  JYCacheFSStatVFS.java
hadoop_posix/hadoop_sdk/java/src/test/java/io/aisoft9/jycache/fs/others/: TestOthers.java
hadoop_posix/hadoop_sdk/libjycachefs/: BUILD  README.md  client.BUILD  libjycachefs.cpp  libjycachefs.h
hadoop_posix/hadoop_sdk/libjycachefs/examples/: Makefile  append.c  chmod.c  common.h  fstat.c  ls.c  mkdir.c  read.c  rename.c  rmdir.c  stat.c  statfs.c  touch.c  unlink.c  write.c
hadoop_posix/util/: sdk.sh
intercept/: CMakeLists.txt  client.cpp  server.cpp
intercept/common/: CMakeLists.txt  common.cpp  common.h
intercept/discovery/: CMakeLists.txt  discovery.h  iceoryx_discovery.cpp  iceoryx_discovery.h
intercept/filesystem/: CMakeLists.txt  abstract_filesystem.h  curve_filesystem.cpp  curve_filesystem.h  dummy_filesystem.cpp  dummy_filesystem.h  libcurvefs_external.cpp  libcurvefs_external.h  s3fs_filesystem.cpp  s3fs_filesystem.h  s3fs_lib.h
intercept/internal/: CMakeLists.txt  metainfo.h  posix_op_req_res.cpp  posix_op_req_res.h
intercept/middleware/: CMakeLists.txt  iceoryx_wrapper.cpp  iceoryx_wrapper.h  req_res_middleware_wrapper.cpp  req_res_middleware_wrapper.h
intercept/posix/: CMakeLists.txt  posix_helper.h  posix_op.cpp  posix_op.h  syscall_client.h
intercept/registry/: CMakeLists.txt  client_server_registry.cpp  client_server_registry.h
local_cache/: CMakeLists.txt  accessor.h  common.cpp  common.h  config.cpp  config.h  data_adaptor.h  errorcode.h  page_cache.cpp  page_cache.h  read_cache.cpp  read_cache.h  throttle.cpp  throttle.h  write_cache.cpp  write_cache.h
s3fs/: CMakeLists.txt  cache.cpp  common.h  common_auth.cpp  config.h  curl.cpp  curl.h  fdcache.cpp  fdcache.h  fdcache_entity.cpp  fdcache_entity.h  hybridcache_accessor_4_s3fs.cpp  hybridcache_accessor_4_s3fs.h  hybridcache_disk_data_adaptor.cpp  hybridcache_disk_data_adaptor.h  hybridcache_s3_data_adaptor.cpp  hybridcache_s3_data_adaptor.h  s3fs.cpp  s3fs_auth.h  s3fs_global.cpp  s3fs_help.cpp  s3fs_lib.cpp  s3fs_lib.h  s3fs_util.cpp  s3fs_util.h  s3fs_version.md  types.h
test/: CMakeLists.txt  hybridcache.conf  test_config.cpp  test_future.cpp  test_global_read_cache.cpp  test_global_read_cache_perf.cpp  test_global_write_cache_perf.cpp  test_page_cache.cpp  test_read_cache.cpp  test_write_cache.cpp
